[package]
name = "server"
version = "0.1.0"
authors = ["salibert"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = "0.7"
actix-web = "0.7"
actix = "0.7"
futures = "0.1"
env_logger = "0.5"
models = { path = "src/models" }
diesel = { version = "1.4.1", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.9.0"