[package]
name = "Plums"
version = "0.0.1"
authors = ["salibert"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = { version = "0.7.0" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "1.4.1", features = ["postgres", "chrono", "serde_json", "r2d2"] }
dotenv = "0.13.0"
num_cpus = "1.0"
futures = "0.1.0"
env_logger = "0.5.10"
uuid = { version = "0.6", features = ["v4"] }
regex = "1.1.0"
lazy_static = "1.2.0"