[package]
name = "Plums"
version = "0.0.1"
authors = ["salibert"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = { version = "0.7" }
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "chrono", "serde_json", "r2d2"] }
dotenv = "0.13"
num_cpus = "1"
futures = "0.1"
env_logger = "0.5"
uuid = { version = "0.6", features = ["v4"] }
regex = "1.1"
lazy_static = "1.2"
rand = "*"
bytes = { version = "0.4", features = ["serde"]}
byteorder = "1.3"
tokio-core = "0.1"
tokio-io = "0.1"